[gd_scene load_steps=5 format=3 uid="uid://c5mpwl5isf05w"]

[ext_resource type="Script" uid="uid://0cnp3ngnxnb0" path="res://scripts/radio_view.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://5ao8a6ni070w" path="res://assets/radio.jpg" id="2_texture"]
[ext_resource type="FontFile" uid="uid://drldawfj5s52i" path="res://fonts/VT323-Regular.ttf" id="3_font"]
[ext_resource type="Texture2D" uid="uid://cmcbrejvw3jnt" path="res://assets/knob.png" id="4_knob"]

[node name="RadioView" type="Node"]
script = ExtResource("1_script")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
texture = ExtResource("2_texture")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 101

[node name="Root" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0

[node name="SongLabel" type="Label" parent="UILayer/Root"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1917.0
offset_top = 1222.0
offset_right = 2362.0
offset_bottom = 1367.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 1, 0.3, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 36
text = "-- OFF --"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="VolumeKnob" type="TextureRect" parent="UILayer/Root"]
layout_mode = 0
offset_left = 1439.0
offset_top = 1182.0
offset_right = 1690.0
offset_bottom = 1433.0
pivot_offset = Vector2(125.5, 125.5)
mouse_filter = 0
texture = ExtResource("4_knob")
expand_mode = 1
stretch_mode = 5

[node name="VolumeDisplay" type="Control" parent="UILayer/Root"]
anchors_preset = 0
offset_left = 1916.0
offset_top = 1410.0
offset_right = 2361.0
offset_bottom = 1440.0

[node name="VolumeBar" type="ColorRect" parent="UILayer/Root/VolumeDisplay"]
layout_mode = 0
offset_left = 11.0
offset_top = -59.0
offset_right = 233.5
offset_bottom = -29.0
color = Color(0.2, 1, 0.3, 1)

[node name="PowerButton" type="Button" parent="UILayer/Root"]
layout_mode = 0
offset_left = 1309.0
offset_top = 1190.0
offset_right = 1459.0
offset_bottom = 1240.0
theme_override_font_sizes/font_size = 24
text = "POWER"

[node name="NextButton" type="Button" parent="UILayer/Root"]
layout_mode = 0
offset_left = 2340.0
offset_top = 1344.0
offset_right = 2490.0
offset_bottom = 1394.0
theme_override_font_sizes/font_size = 24
text = "NEXT"

[node name="PrevButton" type="Button" parent="UILayer/Root"]
layout_mode = 0
offset_left = 2340.0
offset_top = 1200.0
offset_right = 2490.0
offset_bottom = 1250.0
theme_override_font_sizes/font_size = 24
text = "PREV"

[node name="HintLabel" type="Label" parent="UILayer/Root"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3852.0
offset_top = 2257.0
offset_right = 4032.0
offset_bottom = 2332.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 0.8)
theme_override_font_sizes/font_size = 24
text = "RMB to leave"
horizontal_alignment = 2
